@@ -31,7 +31,7 @@ xmessage_SOURCES =	\
         xmessage.c \
         xmessage.h
 
-appman_SOURCES = \
+appman_PRE = \
         xmessage.man
 
 # App default files  (*.ad)
@@ -57,9 +57,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
